--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <head>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
         <title>Космический туризм</title>                
     </head>
     <body>
         <header>            
             <div class="navigation-panel">                
-                <div style="margin-left: 5%; width: 10%;"><img src="../img/logo.png" alt="Logo"></div>                
+                <div style="margin-left: 5%; width: 10%;"><img src="img/logo.png" alt="Logo"></div>                
                 <nav class="navigation-panel" style="padding: 20px;" aria-label="NavElems">
                     <a href="">Компания</a>
                     <a href="">Каталог</a>
@@ -18,8 +18,8 @@
                 </nav>                                
                 <div style="margin-left: auto;">
                     <ul aria-label="nav-elems" class="other-contacts">
-                        <li><a style="margin-left: 10px;" href=""><img src="../img/mail-icon.png" alt="mail-icon"></a></li>
-                        <li><a style="margin-left: 20px;" href=""><img src="../img/phone-icon.png" alt="phone-icon"></a></li>
+                        <li><a style="margin-left: 10px;" href=""><img src="img/mail-icon.png" alt="mail-icon"></a></li>
+                        <li><a style="margin-left: 20px;" href=""><img src="img/phone-icon.png" alt="phone-icon"></a></li>
                     </ul>
                 </div>
             </div>            
@@ -41,26 +41,26 @@
             <div class="advantages">
                 <div class="advantages-div">
                     <div class="advantage-style">
-                        <img src="../img/advantage-icon-1.png" alt="rocket-icon">
+                        <img src="img/advantage-icon-1.png" alt="rocket-icon">
                         <p>Комфортабельные ракеты отечественного произодства.</p>                    
                     </div>
                     <div class="advantage-style">
-                        <img src="../img/advantage-icon-2.png" alt="rocket-icon">
+                        <img src="img/advantage-icon-2.png" alt="rocket-icon">
                         <p>Вкусное и полезное космическое питание на борту.</p>                    
                     </div>
                     <div class="advantage-style">
-                        <img src="../img/advantage-icon-3.png" alt="rocket-icon">
+                        <img src="img/advantage-icon-3.png" alt="rocket-icon">
                         <p>Весь состав пилотов состоит из бывших космонавтов.</p>                    
                     </div>
                     <div class="advantage-style">
-                        <img src="../img/advantage-icon-4.png" alt="rocket-icon">
+                        <img src="img/advantage-icon-4.png" alt="rocket-icon">
                         <p>Экскурсии на луноходе на Море Ясности и Океан бурь.</p>                    
                     </div>
                 </div>                
             </div>          
             <div class="description">                
                 <div class="description-of-tour" style="color: black;">
-                    <img src="../img/map.jpg" alt="map" width="500" height="450" style="margin-top: 50px;">               
+                    <img src="img/map.jpg" alt="map" width="500" height="450" style="margin-top: 50px;">               
                     <div>
                         <h2>Надоело летать в отпуск за границу? Как на счет того, чтобы слетать на Луну?</h2>
                         <article style="width: 20em;">
@@ -139,7 +139,7 @@
         <footer>
             <div class="logo-with-copyright">
                 <div class="logo-with-name">
-                    <img src="../img/logo.png" alt="logo">
+                    <img src="img/logo.png" alt="logo">
                     <p>Space Z</p>
                 </div>
                 <div class="copyright"><p> ООО «Космос Зэ». <br> Все права защищены.</p></div>
