--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
-        <title>Космический туризм</title>                
+        <title>На луну и обратно</title>                
     </head>
     <body>
         <header>            
